--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7",
     "vaul": "^1.1.2",
-    "zod": "^3.24.4","@supabase/supabase-js": ", "wavesurfer.js": "^7.6.0"t^2.39.0"
+  "zod": "^3.24.4",
+"@supabase/supabase-js": "2.39.0",
+"wavesurfer.js": "^7.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
