--- a/package.json
+++ b/package.json
@@ -56,8 +56,6 @@
     "react-router-dom": "^7.6.1",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
-    "tailwind-merge": "^3.3.0",
-    "tailwindcss": "^4.1.7",
     "vaul": "^1.1.2",
     "wavesurfer.js": "^7.6.0",
     "zod": "^3.24.4"
@@ -73,6 +71,9 @@
     "globals": "^16.0.0",
     "tw-animate-css": "^1.2.9",
     "vite": "^6.3.5"
+    "tailwindcss": "^3.4.0",
+"postcss": "^8.4.0",
+"autoprefixer": "^10.4.0",
   },
   "packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af"
 }
