--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -75,3 +75,11 @@ collections:
           { label: "Image", name: "image", widget: "image" },
           { label: "Caption", name: "caption", widget: "string" }
         ]}
+# Site Configuration
+site_url: https://idaho-broadcasting-foundation.netlify.app
+display_url: https://idaho-broadcasting-foundation.netlify.app
+logo_url: https://idaho-broadcasting-foundation.netlify.app/images/logo.png
+
+# Editor settings
+editor:
+  preview: true
