--- a/public/editor/config.yml
+++ b/public/editor/config.yml
@@ -1,6 +1,8 @@
  
 backend:
-  name: git-gateway
+backend:
+  name: github
+  repo: dmccolly/idaho-broadcasting-foundation
   branch: main
 
 media_folder: "public/uploads"
