--- a/public/editor/config.yml
+++ b/public/editor/config.yml
@@ -1,87 +1,21 @@
- 
-backend:
 backend:
   name: github
-  repo: dmccolly/idaho-broadcasting-foundation
-  branch: main
+    repo: dmccolly/idaho-broadcasting-foundation
+      branch: main
 
-media_folder: "public/uploads"
-public_folder: "/uploads"
+      media_folder: "public/images/uploads"
+      public_folder: "/images/uploads"
 
-collections:
-  # Documentation pages
-  - name: "docs"
-    label: "Pages"
-    folder: "src/content/docs"
-    create: true
-    slug: "{{slug}}"
-    fields:
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Description", name: "description", widget: "string", required: false }
-      - { label: "Content", name: "body", widget: "markdown" }
-
-  # VOX Audio Clips
-  - name: "vox-clips"
-    label: "VOX Audio Clips"
-    folder: "src/content/vox"
-    create: true
-    slug: "{{fields.title}}"
-    fields:
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Description", name: "description", widget: "text" }
-      - { label: "Audio File", name: "audio_file", widget: "file", media_library: { config: { accept: ["audio/*"] } } }
-      - { label: "Station", name: "station", widget: "string", required: false }
-      - { label: "Date Recorded", name: "date_recorded", widget: "datetime", required: false }
-      - { label: "Contributor", name: "contributor", widget: "string", required: false }
-      - { label: "Transcript", name: "transcript", widget: "text", required: false }
-
-  # Radio Stations
-  - name: "radio-stations"
-    label: "Radio Stations"
-    folder: "src/content/stations/radio"
-    create: true
-    slug: "{{fields.call_letters}}-{{fields.frequency}}"
-    fields:
-      - { label: "Call Letters", name: "call_letters", widget: "string" }
-      - { label: "Frequency", name: "frequency", widget: "string" }
-      - { label: "City", name: "city", widget: "string" }
-      - { label: "Format", name: "format", widget: "string" }
-      - { label: "Website", name: "website", widget: "string", required: false }
-      - { label: "History", name: "history", widget: "markdown", required: false }
-
-  # TV Stations
-  - name: "tv-stations"
-    label: "TV Stations"
-    folder: "src/content/stations/tv"
-    create: true
-    slug: "{{fields.call_letters}}-ch{{fields.channel}}"
-    fields:
-      - { label: "Call Letters", name: "call_letters", widget: "string" }
-      - { label: "Channel", name: "channel", widget: "number" }
-      - { label: "City", name: "city", widget: "string" }
-      - { label: "Network", name: "network", widget: "string" }
-      - { label: "Website", name: "website", widget: "string", required: false }
-      - { label: "History", name: "history", widget: "markdown", required: false }
-
-  # Photo Gallery
-  - name: "gallery"
-    label: "Photo Gallery"
-    folder: "src/content/gallery"
-    create: true
-    slug: "{{fields.title}}"
-    fields:
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Description", name: "description", widget: "text" }
-      - { label: "Date", name: "date", widget: "datetime" }
-      - { label: "Photos", name: "photos", widget: "list", fields: [
-          { label: "Image", name: "image", widget: "image" },
-          { label: "Caption", name: "caption", widget: "string" }
-        ]}
-# Site Configuration
-site_url: https://idaho-broadcasting-foundation.netlify.app
-display_url: https://idaho-broadcasting-foundation.netlify.app
-logo_url: https://idaho-broadcasting-foundation.netlify.app/images/logo.png
-
-# Editor settings
-editor:
-  preview: true
+      collections:
+        - name: "blog"
+            label: "Blog"
+                folder: "_posts"
+                    create: true
+                        slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+                            fields:
+                                  - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
+                                        - {label: "Title", name: "title", widget: "string"}
+                                              - {label: "Publish Date", name: "date", widget: "datetime"}
+                                                    - {label: "Featured Image", name: "thumbnail", widget: "image"}
+                                                          - {label: "Rating (scale of 1-5)", name: "rating", widget: "number"}
+                                                                - {label: "Body", name: "body", widget: "markdown"}
