--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "netlify-dev": "netlify dev",
+    "deploy": "netlify deploy --prod"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
@@ -58,7 +60,10 @@
     "tailwind-merge": "^3.3.0",
     "vaul": "^1.1.2",
     "wavesurfer.js": "^7.6.0",
-    "zod": "^3.24.4"
+    "zod": "^3.24.4",
+    "axios": "^1.6.0",
+    "node-html-parser": "^6.1.0",
+    "@netlify/functions": "^2.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
@@ -67,7 +72,8 @@
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.6",
-    "vite": "^4.1.0"
-  }
+    "vite": "^4.1.0",
+    "netlify-cli": "^17.0.0"
+  },
   "packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af"
 }
