--- a/package.json
+++ b/package.json
@@ -73,7 +73,11 @@
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.6",
     "vite": "^4.1.0",
-    "netlify-cli": "^17.0.0"
+    "netlify-cli": "^17.0.0",
+    "@eslint/js": "^9.9.0",
+    "globals": "^15.0.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.3.0"
   },
   "packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af"
 }
