--- a/public/editor/config.yml
+++ b/public/editor/config.yml
@@ -1,80 +1,20 @@
-backend:
-  name: git-gateway
-  branch: main
-
-media_folder: public/uploads
-public_folder: /uploads
-
-site_url: https://idaho-broadcasting-foundation.netlify.app
-display_url: https://idaho-broadcasting-foundation.netlify.app
-logo_url: https://idaho-broadcasting-foundation.netlify.app/images/logo.png
-
-collections:
-  - name: docs
-    label: Pages
-    folder: src/content/docs
-    create: true
-    slug: "{{slug}}"
-    fields:
-      - { label: Title, name: title, widget: string }
-      - { label: Description, name: description, widget: string, required: false }
-      - { label: Content, name: body, widget: markdown }
-
-  - name: vox-clips
-    label: VOX Audio Clips
-    folder: src/content/vox
-    create: true
-    slug: "{{fields.title}}"
-    fields:
-      - { label: Title, name: title, widget: string }
-      - { label: Description, name: description, widget: text }
-      - { label: Audio File, name: audio_file, widget: file, media_library: { config: { accept: ['audio/*'] } } }
-      - { label: Station, name: station, widget: string, required: false }
-      - { label: Date Recorded, name: date_recorded, widget: datetime, required: false }
-      - { label: Contributor, name: contributor, widget: string, required: false }
-      - { label: Transcript, name: transcript, widget: text, required: false }
-
-  - name: radio-stations
-    label: Radio Stations
-    folder: src/content/stations/radio
-    create: true
-    slug: "{{fields.call_letters}}-{{fields.frequency}}"
-    fields:
-      - { label: 'Call Letters', name: call_letters, widget: string }
-      - { label: Frequency, name: frequency, widget: string }
-      - { label: City, name: city, widget: string }
-      - { label: Format, name: format, widget: string }
-      - { label: Website, name: website, widget: string, required: false }
-      - { label: History, name: history, widget: markdown, required: false }
-
-  - name: tv-stations
-    label: TV Stations
-    folder: src/content/stations/tv
-    create: true
-    slug: "{{fields.call_letters}}-ch{{fields.channel}}"
-    fields:
-      - { label: 'Call Letters', name: call_letters, widget: string }
-      - { label: Channel, name: channel, widget: number }
-      - { label: City, name: city, widget: string }
-      - { label: Network, name: network, widget: string }
-      - { label: Website, name: website, widget: string, required: false }
-      - { label: History, name: history, widget: markdown, required: false }
-
-  - name: gallery
-    label: Photo Gallery
-    folder: src/content/gallery
-    create: true
-    slug: "{{fields.title}}"
-    fields:
-      - { label: Title, name: title, widget: string }
-      - { label: Description, name: description, widget: text }
-      - { label: Date, name: date, widget: datetime }
-      - label: Photos
-        name: photos
-        widget: list
-        fields:
-          - { label: Image, name: image, widget: image }
-          - { label: Caption, name: caption, widget: string }
-
-editor:
-  preview: true
+  - name: "events"
+      label: "Events"
+          folder: "_events"
+              create: true
+                  slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+                      fields:
+                            - {label: "Title", name: "title", widget: "string"}
+                                  - {label: "Description", name: "description", widget: "text"}
+                                        - {label: "Start Date & Time", name: "date", widget: "datetime"}
+                                              - {label: "End Date & Time", name: "end_date", widget: "datetime", required: false}
+                                                    - {label: "Location Name", name: "location", widget: "string"}
+                                                          - {label: "Address", name: "address", widget: "string"}
+                                                                - {label: "Featured Image", name: "image", widget: "image", required: false}
+                                                                      - {label: "Category", name: "category", widget: "select", options: ["Conference", "Workshop", "Networking", "Broadcast", "Community", "Other"]}
+                                                                            - {label: "Registration Required", name: "registration_required", widget: "boolean", default: false}
+                                                                                  - {label: "Registration Link", name: "registration_link", widget: "string", required: false}
+                                                                                        - {label: "Contact Email", name: "contact_email", widget: "string", required: false}
+                                                                                              - {label: "Contact Phone", name: "contact_phone", widget: "string", required: false}
+                                                                                                    - {label: "Featured Event", name: "featured", widget: "boolean", default: false}
+                                                                                                          - {label: "Status", name: "status", widget: "select", options: ["Draft", "Published", "Cancelled"], default: "Draft"}
