--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tidy-next",
+  "name": "history-of-idaho-broadcasting",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -27,6 +27,7 @@
     "react-dom": "19.0.0",
     "react-player": "^3.2.0",
     "rehype-pretty-code": "^0.14.0",
+    "tinacms": "^2.8.0",
     "typescript": "^5.7.3"
   },
   "devDependencies": {
